macroarea main footer

--- a/index.html
+++ b/index.html
@@ -13,5 +13,24 @@
     <title>Spotify webapp</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- contenitore generale della web app -->
+    <div class="app-wrapper">
+      <!-- MAIN -->
+      <main>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex ipsam
+        aliquam incidunt tempore ut temporibus, quasi iusto, voluptatem,
+        molestiae aut nemo repellat praesentium? Modi debitis provident
+        obcaecati mollitia molestias consequuntur.
+      </main>
+
+      <!-- FOOTER -->
+      <footer>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+        nesciunt, doloremque quisquam officia ad aliquam magni corporis sapiente
+        modi placeat, voluptatum doloribus, voluptatem porro odit temporibus at
+        earum! Aut, autem?
+      </footer>
+    </div>
+  </body>
 </html>
