struttura macroarea 3 elementi

--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
     <div class="app-wrapper">
       <!-- MAIN -->
       <main>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex ipsam
-        aliquam incidunt tempore ut temporibus, quasi iusto, voluptatem,
-        molestiae aut nemo repellat praesentium? Modi debitis provident
-        obcaecati mollitia molestias consequuntur.
+        <div class="sidebar">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores amet
+          veniam voluptas voluptate distinctio officiis, repellat mollitia
+          laudantium quaerat et aliquid earum doloribus necessitatibus omnis
+          corrupti adipisci rerum nemo debitis?
+        </div>
+        <div class="main-area">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+          accusamus, odio accusantium, fuga et eveniet minima vitae, ab aperiam
+          sunt voluptate aspernatur velit! Facilis nostrum sint quaerat
+          doloremque nihil inventore.
+        </div>
       </main>
 
       <!-- FOOTER -->
