struttura macroarea 4 elementi

--- a/index.html
+++ b/index.html
@@ -18,17 +18,27 @@
     <div class="app-wrapper">
       <!-- MAIN -->
       <main>
+        <!-- sidebar laterale sx -->
         <div class="sidebar">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores amet
           veniam voluptas voluptate distinctio officiis, repellat mollitia
           laudantium quaerat et aliquid earum doloribus necessitatibus omnis
           corrupti adipisci rerum nemo debitis?
         </div>
+
+        <!-- area principale contenuti -->
         <div class="main-area">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
           accusamus, odio accusantium, fuga et eveniet minima vitae, ab aperiam
           sunt voluptate aspernatur velit! Facilis nostrum sint quaerat
           doloremque nihil inventore.
+        </div>
+
+        <!-- elemento overlay effettua upgrade -->
+        <div class="top-overlay">
+          <div class="btn-upgrade">
+            <a href="#">effettua l'upgrade</a>
+          </div>
         </div>
       </main>
 
