--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
       <main>
         <!-- sidebar laterale sx -->
         <div class="sidebar">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores amet
-          veniam voluptas voluptate distinctio officiis, repellat mollitia
-          laudantium quaerat et aliquid earum doloribus necessitatibus omnis
-          corrupti adipisci rerum nemo debitis?
+          <!-- container generale sidebar -->
+          <div class="sidebar-container">
+            <div class="sidebar-top">
+              <div class="logo">
+                <img src="img/logo.svg" alt="logo Spotify grande" />
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- area principale contenuti -->
