secondo elemento sidebar completato

--- a/index.html
+++ b/index.html
@@ -22,10 +22,52 @@
         <div class="sidebar">
           <!-- container generale sidebar -->
           <div class="sidebar-container">
+            <!-- elemento sidebar con logo -->
             <div class="sidebar-top">
               <div class="logo">
                 <img src="img/logo.svg" alt="logo Spotify grande" />
               </div>
+            </div>
+            <!-- elemento sidebar con home cerca e libreria -->
+            <div class="sidebar-nav-box">
+              <ul>
+                <!-- elemento navigazione sidebar -->
+                <li>
+                  <a href="#">
+                    <span
+                      ><img
+                        class="svg-icon"
+                        src="img/home.svg"
+                        alt="icona home"
+                    /></span>
+                    <span>Home</span></a
+                  >
+                </li>
+                <!-- elemento navigazione sidebar -->
+                <li>
+                  <a href="#">
+                    <span
+                      ><img
+                        class="svg-icon"
+                        src="img/search.svg"
+                        alt="icona home"
+                    /></span>
+                    <span>Cerca</span></a
+                  >
+                </li>
+                <!-- elemento navigazione sidebar -->
+                <li>
+                  <a href="#">
+                    <span
+                      ><img
+                        class="svg-icon"
+                        src="img/libreria.svg"
+                        alt="icona home"
+                    /></span>
+                    <span>La tua libreria</span></a
+                  >
+                </li>
+              </ul>
             </div>
           </div>
         </div>
