accento verticale verde in sidebar

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     /></span>
                     <span>Home</span></a
                   >
+                  <div class="vertical-accent"></div>
                 </li>
                 <!-- elemento navigazione sidebar -->
                 <li>
