ultimo elemento sidebar completato

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,7 +40,7 @@
               <ul>
                 <!-- elemento navigazione sidebar -->
                 <li>
-                  <a href="#">
+                  <a id="home" href="#">
                     <span
                       ><img
                         class="svg-icon"
@@ -46,7 +53,7 @@
                 </li>
                 <!-- elemento navigazione sidebar -->
                 <li>
-                  <a href="#">
+                  <a id="cerca" href="#">
                     <span
                       ><img
                         class="svg-icon"
@@ -58,7 +65,7 @@
                 </li>
                 <!-- elemento navigazione sidebar -->
                 <li>
-                  <a href="#">
+                  <a id="libreria" href="#">
                     <span
                       ><img
                         class="svg-icon"
@@ -69,6 +76,74 @@
                   >
                 </li>
               </ul>
+            </div>
+
+            <!-- elemento sidebar con playlist -->
+            <div class="sidebar-playlist-box">
+              <!-- titolo elementi playlist -->
+              <h3>playlist</h3>
+              <!-- lista elementi playlist -->
+              <ul>
+                <!-- singolo elemento playlist -->
+                <li>
+                  <a href="#">
+                    <div class="playlist-creator">
+                      <span><i class="fa-solid fa-square-plus"></i></span>
+                      <span>Crea Playlist</span>
+                    </div>
+                  </a>
+                </li>
+                <!-- singolo elemento playlist -->
+                <li>
+                  <a href="#">Nome Playlist</a>
+                </li>
+                <!-- singolo elemento playlist -->
+                <li>
+                  <a href="#">Nome Playlist</a>
+                </li>
+                <!-- singolo elemento playlist -->
+                <li>
+                  <a href="#">Nome Playlist</a>
+                </li>
+                <!-- singolo elemento playlist -->
+                <li>
+                  <a href="#">Nome Playlist</a>
+                </li>
+                <!-- singolo elemento playlist -->
+                <li>
+                  <a href="#">Nome Playlist</a>
+                </li>
+                <!-- singolo elemento playlist -->
+                <li>
+                  <a href="#">Nome Playlist</a>
+                </li>
+                <!-- singolo elemento playlist -->
+                <li>
+                  <a href="#">Nome Playlist</a>
+                </li>
+              </ul>
+            </div>
+
+            <!-- elemento sidebar con utente -->
+            <div class="sidebar-user">
+              <div class="dl-app">
+                <a href="#">
+                  <span
+                    ><img
+                      src="img/download.svg"
+                      alt="icona di download applicazione"
+                  /></span>
+                  <span>Installa app</span>
+                </a>
+              </div>
+              <div class="user-data">
+                <span
+                  ><img
+                    src="img/profile.svg"
+                    alt="immagine di profilo dell'utente"
+                /></span>
+                <span>John Doe</span>
+              </div>
             </div>
           </div>
         </div>
