--- a/index.html
+++ b/index.html
@@ -29,120 +29,122 @@
         <div class="sidebar">
           <!-- container generale sidebar -->
           <div class="sidebar-container">
-            <!-- elemento sidebar con logo -->
-            <div class="sidebar-top">
-              <div class="logo">
-                <img src="img/logo.svg" alt="logo Spotify grande" />
+            <div class="sidebar-flex">
+              <!-- elemento sidebar con logo -->
+              <div class="sidebar-top">
+                <div class="logo">
+                  <img src="img/logo.svg" alt="logo Spotify grande" />
+                </div>
               </div>
-            </div>
-            <!-- elemento sidebar con home cerca e libreria -->
-            <div class="sidebar-nav-box">
-              <ul>
-                <!-- elemento navigazione sidebar -->
-                <li>
-                  <a id="home" href="#">
-                    <span
-                      ><img
-                        class="svg-icon"
-                        src="img/home.svg"
-                        alt="icona home"
-                    /></span>
-                    <span>Home</span></a
-                  >
-                  <div class="vertical-accent"></div>
-                </li>
-                <!-- elemento navigazione sidebar -->
-                <li>
-                  <a id="cerca" href="#">
-                    <span
-                      ><img
-                        class="svg-icon"
-                        src="img/search.svg"
-                        alt="icona home"
-                    /></span>
-                    <span>Cerca</span></a
-                  >
-                </li>
-                <!-- elemento navigazione sidebar -->
-                <li>
-                  <a id="libreria" href="#">
-                    <span
-                      ><img
-                        class="svg-icon"
-                        src="img/libreria.svg"
-                        alt="icona home"
-                    /></span>
-                    <span>La tua libreria</span></a
-                  >
-                </li>
-              </ul>
-            </div>
+              <!-- elemento sidebar con home cerca e libreria -->
+              <div class="sidebar-nav-box">
+                <ul>
+                  <!-- elemento navigazione sidebar -->
+                  <li>
+                    <a id="home" href="#">
+                      <span
+                        ><img
+                          class="svg-icon"
+                          src="img/home.svg"
+                          alt="icona home"
+                      /></span>
+                      <span>Home</span></a
+                    >
+                    <div class="vertical-accent"></div>
+                  </li>
+                  <!-- elemento navigazione sidebar -->
+                  <li>
+                    <a id="cerca" href="#">
+                      <span
+                        ><img
+                          class="svg-icon"
+                          src="img/search.svg"
+                          alt="icona home"
+                      /></span>
+                      <span>Cerca</span></a
+                    >
+                  </li>
+                  <!-- elemento navigazione sidebar -->
+                  <li>
+                    <a id="libreria" href="#">
+                      <span
+                        ><img
+                          class="svg-icon"
+                          src="img/libreria.svg"
+                          alt="icona home"
+                      /></span>
+                      <span>La tua libreria</span></a
+                    >
+                  </li>
+                </ul>
+              </div>
 
-            <!-- elemento sidebar con playlist -->
-            <div class="sidebar-playlist-box">
-              <!-- titolo elementi playlist -->
-              <h3>playlist</h3>
-              <!-- lista elementi playlist -->
-              <ul>
-                <!-- singolo elemento playlist -->
-                <li>
+              <!-- elemento sidebar con playlist -->
+              <div class="sidebar-playlist-box">
+                <!-- titolo elementi playlist -->
+                <h3>playlist</h3>
+                <!-- lista elementi playlist -->
+                <ul>
+                  <!-- singolo elemento playlist -->
+                  <li>
+                    <a href="#">
+                      <div class="playlist-creator">
+                        <span><i class="fa-solid fa-square-plus"></i></span>
+                        <span>Crea Playlist</span>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- singolo elemento playlist -->
+                  <li>
+                    <a href="#">Nome Playlist</a>
+                  </li>
+                  <!-- singolo elemento playlist -->
+                  <li>
+                    <a href="#">Nome Playlist</a>
+                  </li>
+                  <!-- singolo elemento playlist -->
+                  <li>
+                    <a href="#">Nome Playlist</a>
+                  </li>
+                  <!-- singolo elemento playlist -->
+                  <li>
+                    <a href="#">Nome Playlist</a>
+                  </li>
+                  <!-- singolo elemento playlist -->
+                  <li>
+                    <a href="#">Nome Playlist</a>
+                  </li>
+                  <!-- singolo elemento playlist -->
+                  <li>
+                    <a href="#">Nome Playlist</a>
+                  </li>
+                  <!-- singolo elemento playlist -->
+                  <li>
+                    <a href="#">Nome Playlist</a>
+                  </li>
+                </ul>
+              </div>
+
+              <!-- elemento sidebar con utente -->
+              <div class="sidebar-user">
+                <div class="dl-app">
                   <a href="#">
-                    <div class="playlist-creator">
-                      <span><i class="fa-solid fa-square-plus"></i></span>
-                      <span>Crea Playlist</span>
-                    </div>
+                    <span
+                      ><img
+                        src="img/download.svg"
+                        alt="icona di download applicazione"
+                    /></span>
+                    <span>Installa app</span>
                   </a>
-                </li>
-                <!-- singolo elemento playlist -->
-                <li>
-                  <a href="#">Nome Playlist</a>
-                </li>
-                <!-- singolo elemento playlist -->
-                <li>
-                  <a href="#">Nome Playlist</a>
-                </li>
-                <!-- singolo elemento playlist -->
-                <li>
-                  <a href="#">Nome Playlist</a>
-                </li>
-                <!-- singolo elemento playlist -->
-                <li>
-                  <a href="#">Nome Playlist</a>
-                </li>
-                <!-- singolo elemento playlist -->
-                <li>
-                  <a href="#">Nome Playlist</a>
-                </li>
-                <!-- singolo elemento playlist -->
-                <li>
-                  <a href="#">Nome Playlist</a>
-                </li>
-                <!-- singolo elemento playlist -->
-                <li>
-                  <a href="#">Nome Playlist</a>
-                </li>
-              </ul>
-            </div>
-
-            <!-- elemento sidebar con utente -->
-            <div class="sidebar-user">
-              <div class="dl-app">
-                <a href="#">
+                </div>
+                <div class="user-data">
                   <span
                     ><img
-                      src="img/download.svg"
-                      alt="icona di download applicazione"
+                      src="img/profile.svg"
+                      alt="immagine di profilo dell'utente"
                   /></span>
-                  <span>Installa app</span>
-                </a>
-              </div>
-              <div class="user-data">
-                <span
-                  ><img
-                    src="img/profile.svg"
-                    alt="immagine di profilo dell'utente"
-                /></span>
-                <span>John Doe</span>
+                  <span class="user-name">John Doe</span>
+                </div>
               </div>
             </div>
           </div>
