elemento navigazione main area terminato

--- a/index.html
+++ b/index.html
@@ -152,10 +152,38 @@
 
         <!-- area principale contenuti -->
         <div class="main-area">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
-          accusamus, odio accusantium, fuga et eveniet minima vitae, ab aperiam
-          sunt voluptate aspernatur velit! Facilis nostrum sint quaerat
-          doloremque nihil inventore.
+          <!-- prima section navbar -->
+          <section>
+            <div class="main-nav">
+              <ul>
+                <!-- singolo elemento navigazione sezione main -->
+                <li>
+                  <a href="#">in evidenza</a>
+                  <hr />
+                </li>
+                <!-- singolo elemento navigazione sezione main -->
+                <li>
+                  <a href="#">podcast</a>
+                </li>
+                <!-- singolo elemento navigazione sezione main -->
+                <li>
+                  <a href="#">classifiche</a>
+                </li>
+                <!-- singolo elemento navigazione sezione main -->
+                <li>
+                  <a href="#">generi e mood</a>
+                </li>
+                <!-- singolo elemento navigazione sezione main -->
+                <li>
+                  <a href="#">nuove uscite</a>
+                </li>
+                <!-- singolo elemento navigazione sezione main -->
+                <li>
+                  <a href="#">scopri</a>
+                </li>
+              </ul>
+            </div>
+          </section>
         </div>
 
         <!-- elemento overlay effettua upgrade -->
