hover su overlay effettua upgrade

--- a/index.html
+++ b/index.html
@@ -83,17 +83,14 @@
               <div class="sidebar-playlist-box">
                 <!-- titolo elementi playlist -->
                 <h3>playlist</h3>
+                <a href="#">
+                  <div class="playlist-creator">
+                    <span><i class="fa-solid fa-square-plus"></i></span>
+                    <span>Crea Playlist</span>
+                  </div>
+                </a>
                 <!-- lista elementi playlist -->
                 <ul>
-                  <!-- singolo elemento playlist -->
-                  <li>
-                    <a href="#">
-                      <div class="playlist-creator">
-                        <span><i class="fa-solid fa-square-plus"></i></span>
-                        <span>Crea Playlist</span>
-                      </div>
-                    </a>
-                  </li>
                   <!-- singolo elemento playlist -->
                   <li>
                     <a href="#">Nome Playlist</a>
@@ -152,38 +149,45 @@
 
         <!-- area principale contenuti -->
         <div class="main-area">
-          <!-- prima section navbar -->
-          <section>
-            <div class="main-nav">
-              <ul>
-                <!-- singolo elemento navigazione sezione main -->
-                <li>
-                  <a href="#">in evidenza</a>
-                  <hr />
-                </li>
-                <!-- singolo elemento navigazione sezione main -->
-                <li>
-                  <a href="#">podcast</a>
-                </li>
-                <!-- singolo elemento navigazione sezione main -->
-                <li>
-                  <a href="#">classifiche</a>
-                </li>
-                <!-- singolo elemento navigazione sezione main -->
-                <li>
-                  <a href="#">generi e mood</a>
-                </li>
-                <!-- singolo elemento navigazione sezione main -->
-                <li>
-                  <a href="#">nuove uscite</a>
-                </li>
-                <!-- singolo elemento navigazione sezione main -->
-                <li>
-                  <a href="#">scopri</a>
-                </li>
-              </ul>
-            </div>
-          </section>
+          <div class="section-container">
+            <!-- prima section navbar -->
+            <section>
+              <div class="main-nav">
+                <ul>
+                  <!-- singolo elemento navigazione sezione main -->
+                  <li>
+                    <a href="#">in evidenza</a>
+                    <hr />
+                  </li>
+                  <!-- singolo elemento navigazione sezione main -->
+                  <li>
+                    <a href="#">podcast</a>
+                  </li>
+                  <!-- singolo elemento navigazione sezione main -->
+                  <li>
+                    <a href="#">classifiche</a>
+                  </li>
+                  <!-- singolo elemento navigazione sezione main -->
+                  <li>
+                    <a href="#">generi e mood</a>
+                  </li>
+                  <!-- singolo elemento navigazione sezione main -->
+                  <li>
+                    <a href="#">nuove uscite</a>
+                  </li>
+                  <!-- singolo elemento navigazione sezione main -->
+                  <li>
+                    <a href="#">scopri</a>
+                  </li>
+                </ul>
+              </div>
+            </section>
+
+            <!-- seconda section Recently Played -->
+            <section class="recently">
+              <h2>Recently Played</h2>
+            </section>
+          </div>
         </div>
 
         <!-- elemento overlay effettua upgrade -->
