hover nella sidebar

--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
                 <h3>playlist</h3>
                 <a href="#">
                   <div class="playlist-creator">
-                    <span><i class="fa-solid fa-square-plus"></i></span>
-                    <span>Crea Playlist</span>
+                    <a href="#">
+                      <span><i class="fa-solid fa-square-plus"></i></span>
+                      <span>Crea Playlist</span>
+                    </a>
                   </div>
                 </a>
                 <!-- lista elementi playlist -->
