--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               <div class="sidebar-top">
                 <div class="logo">
                   <img src="img/logo.svg" alt="logo Spotify grande" />
+                  <img src="img/logo-small.svg" alt="logo Spotify piccolo" />
                 </div>
               </div>
               <!-- elemento sidebar con home cerca e libreria -->
@@ -188,6 +189,11 @@
             <!-- seconda section Recently Played -->
             <section class="recently">
               <h2>Recently Played</h2>
+              <div class="recently-box">
+                <div class="recently-col">
+                  <div class="recently-card"></div>
+                </div>
+              </div>
             </section>
           </div>
         </div>
