struttura prima sezione area principale

--- a/index.html
+++ b/index.html
@@ -189,9 +189,67 @@
             <!-- seconda section Recently Played -->
             <section class="recently">
               <h2>Recently Played</h2>
+              <!-- box generale contenuti recently played-->
               <div class="recently-box">
+                <!-- colonna contenuti recently played -->
                 <div class="recently-col">
-                  <div class="recently-card"></div>
+                  <!-- singola card recently played -->
+                  <div class="recently-card">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Ratione voluptas suscipit iste excepturi quia sunt?
+                    Molestiae a facilis modi impedit voluptas error qui ipsam
+                    earum.
+                  </div>
+                </div>
+                <!-- colonna contenuti recently played -->
+                <div class="recently-col">
+                  <!-- singola card recently played -->
+                  <div class="recently-card">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Ratione voluptas suscipit iste excepturi quia sunt?
+                    Molestiae a facilis modi impedit voluptas error qui ipsam
+                    earum.
+                  </div>
+                </div>
+                <!-- colonna contenuti recently played -->
+                <div class="recently-col">
+                  <!-- singola card recently played -->
+                  <div class="recently-card">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Ratione voluptas suscipit iste excepturi quia sunt?
+                    Molestiae a facilis modi impedit voluptas error qui ipsam
+                    earum.
+                  </div>
+                </div>
+                <!-- colonna contenuti recently played -->
+                <div class="recently-col">
+                  <!-- singola card recently played -->
+                  <div class="recently-card">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Ratione voluptas suscipit iste excepturi quia sunt?
+                    Molestiae a facilis modi impedit voluptas error qui ipsam
+                    earum.
+                  </div>
+                </div>
+                <!-- colonna contenuti recently played -->
+                <div class="recently-col">
+                  <!-- singola card recently played -->
+                  <div class="recently-card">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Ratione voluptas suscipit iste excepturi quia sunt?
+                    Molestiae a facilis modi impedit voluptas error qui ipsam
+                    earum.
+                  </div>
+                </div>
+                <!-- colonna contenuti recently played -->
+                <div class="recently-col">
+                  <!-- singola card recently played -->
+                  <div class="recently-card">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Ratione voluptas suscipit iste excepturi quia sunt?
+                    Molestiae a facilis modi impedit voluptas error qui ipsam
+                    earum.
+                  </div>
                 </div>
               </div>
             </section>
