struttura base sezioni area principale

--- a/index.html
+++ b/index.html
@@ -253,6 +253,64 @@
                 </div>
               </div>
             </section>
+
+            <!-- sezione creato per utente -->
+            <section class="created">
+              <h2>Creato per John Doe</h2>
+              <p>Più ascolti, più accurati saranno i suggerimenti</p>
+              <!-- box generale contenuti created for -->
+              <div class="created-box">
+                <!-- colonna contenuti created for -->
+                <div class="created-col">
+                  <!-- singola card created for -->
+                  <div class="created-card">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Sequi quidem dolore necessitatibus eos. Accusamus
+                    consectetur voluptates molestiae quod obcaecati ipsam error
+                    voluptatibus aperiam officiis facere!/div>
+                  </div>
+                </div>
+                <!-- colonna contenuti created for -->
+                <div class="created-col">
+                  <!-- singola card created for -->
+                  <div class="created-card">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Sequi quidem dolore necessitatibus eos. Accusamus
+                    consectetur voluptates molestiae quod obcaecati ipsam error
+                    voluptatibus aperiam officiis facere!/div>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <!-- sezione artisti più popolari -->
+            <section class="popular">
+              <h2>Artisti più popolari</h2>
+              <p>Più ascolti, più accurati saranno i suggerimenti</p>
+              <!-- box generale contenuti artisti più popolari -->
+              <div class="popular-box">
+                <!-- colonna contenuti artisti più popolari -->
+                <div class="popular-col">
+                  <!-- singola card artisti più popolari -->
+                  <div class="popular-card">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Sequi quidem dolore necessitatibus eos. Accusamus
+                    consectetur voluptates molestiae quod obcaecati ipsam error
+                    voluptatibus aperiam officiis facere!/div>
+                  </div>
+                </div>
+                <!-- colonna contenuti artisti più popolari -->
+                <div class="popular-col">
+                  <!-- singola card artisti più popolari -->
+                  <div class="popular-card">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Sequi quidem dolore necessitatibus eos. Accusamus
+                    consectetur voluptates molestiae quod obcaecati ipsam error
+                    voluptatibus aperiam officiis facere!/div>
+                  </div>
+                </div>
+              </div>
+            </section>
           </div>
         </div>
 
