main area resa responsive

--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
               <!-- box generale contenuti recently played-->
               <div class="recently-box">
                 <!-- colonna contenuti recently played -->
-                <div class="recently-col">
+                <div class="recently columns">
                   <!-- singola card recently played -->
-                  <div class="recently-card">
+                  <div class="recently card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -202,9 +202,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
-                <div class="recently-col">
+                <div class="recently columns">
                   <!-- singola card recently played -->
-                  <div class="recently-card">
+                  <div class="recently card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -212,9 +212,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
-                <div class="recently-col">
+                <div class="recently columns">
                   <!-- singola card recently played -->
-                  <div class="recently-card">
+                  <div class="recently card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -222,9 +222,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
-                <div class="recently-col">
+                <div class="recently columns">
                   <!-- singola card recently played -->
-                  <div class="recently-card">
+                  <div class="recently card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -232,9 +232,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
-                <div class="recently-col">
+                <div class="recently columns">
                   <!-- singola card recently played -->
-                  <div class="recently-card">
+                  <div class="recently card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -242,9 +242,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
-                <div class="recently-col">
+                <div class="recently columns">
                   <!-- singola card recently played -->
-                  <div class="recently-card">
+                  <div class="recently card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -261,9 +261,9 @@
               <!-- box generale contenuti created for -->
               <div class="created-box">
                 <!-- colonna contenuti created for -->
-                <div class="created-col">
+                <div class="created columns">
                   <!-- singola card created for -->
-                  <div class="created-card">
+                  <div class="created card">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sequi quidem dolore necessitatibus eos. Accusamus
                     consectetur voluptates molestiae quod obcaecati ipsam error
@@ -271,9 +271,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti created for -->
-                <div class="created-col">
+                <div class="created columns">
                   <!-- singola card created for -->
-                  <div class="created-card">
+                  <div class="created card">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sequi quidem dolore necessitatibus eos. Accusamus
                     consectetur voluptates molestiae quod obcaecati ipsam error
@@ -290,9 +290,9 @@
               <!-- box generale contenuti artisti più popolari -->
               <div class="popular-box">
                 <!-- colonna contenuti artisti più popolari -->
-                <div class="popular-col">
+                <div class="popular columns">
                   <!-- singola card artisti più popolari -->
-                  <div class="popular-card">
+                  <div class="popular card">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sequi quidem dolore necessitatibus eos. Accusamus
                     consectetur voluptates molestiae quod obcaecati ipsam error
@@ -300,14 +300,15 @@
                   </div>
                 </div>
                 <!-- colonna contenuti artisti più popolari -->
-                <div class="popular-col">
+                <div class="popular columns">
                   <!-- singola card artisti più popolari -->
-                  <div class="popular-card">
+                  <div class="popular card">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sequi quidem dolore necessitatibus eos. Accusamus
                     consectetur voluptates molestiae quod obcaecati ipsam error
                     voluptatibus aperiam officiis facere!/div>
                   </div>
+                </div> 
                 </div>
               </div>
             </section>
